src/main/resources/static/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service_name
  labels:
    app: service_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service_name
  template:
    metadata:
      labels:
        app: service_name
    spec:
      containers:
        - name: runner
          image: stefanwalther/docker-test
          ports:
            - containerPort: 3001
            - containerPort: 3000
