src/main/resources/static/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service_name
  namespace: default
  labels:
    app: service_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service_name
  template:
    metadata:
      labels:
        app: service_name
    spec:
      containers:
        - name: runner
          image: darkway/codelab_service:v24
          ports:
            - containerPort: 8000
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service_name
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: service_name
  ports:
    - protocol: TCP
      name: ws
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: user
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service_name
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: service_name.mylocal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service_name
                port:
                  number: 8080
    - host: service_name.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service_name
                port:
                  number: 8000
